Fix post spacing, closes #1124 Only show post favorited if Twitter Realtime plugin is enabled, closes #1145

--- a/webapp/assets/css/style.css
+++ b/webapp/assets/css/style.css
@@ -347,7 +347,7 @@ h4.trigger a:active {border:none}
 /* --- NUMBERS -------------------------------- */
 
 #keystats {padding:5px;font-size:medium;}
-.big-number {color:#000;font-size:1.7em;line-height:1.8em;}
+.big-number {color:#000;font-size:1.7em;line-height:1.8em;margin-top:1em}
 .big-number h1 {font-size:2.7em;font-weight:700;letter-spacing:-4px;padding:0;margin:0;}
 .big-number h3 {color:#666;font-size:0.8em;}
 
